--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sangago/TIL"
+    "url": "https://github.com/Angela-learner/TIL"
   },
-  "author": "gosang <sangago.dev@gmail.com>",
+  "author": "ohkimangela <ohkimangela0904@gmail.com>",
   "license": "MIT",
   "keywords": [
     "gatsby",
